Enhancements: 1) Sync with ionic-conference-app typescript branch as of 4/8/2016 2) Renamed SCSS specific for MoneyLeash 3) Added contrast color to custom ML navbar 4) Fixed several minor bugs and added a couple of tiny enhancements

--- a/app/theme/app.md.scss
+++ b/app/theme/app.md.scss
@@ -12,6 +12,14 @@
 // Material Design only Sass variables can go here
 
 
+$toolbar-md-background:                   color($colors, primary) !default;
+$toolbar-md-text-color:                   #fff !default;
+$toolbar-md-active-color:                 #fff !default;
+$toolbar-md-inactive-color:               #fff !default;
+$toolbar-md-button-color:                 #fff !default;
+
+$segment-button-md-text-color-activated:  #fff !default;
+
 // Ionic Material Design Sass
 // --------------------------------------------------
 // Custom App variables must be declared before importing Ionic.
