--- a/app/theme/app.variables.scss
+++ b/app/theme/app.variables.scss
@@ -1,5 +1,10 @@
 // http://ionicframework.com/docs/v2/theming/
 
+// Ionic Shared Functions
+// --------------------------------------------------
+// Makes Ionic Sass functions available to your App
+
+@import 'globals.core';
 
 // App Shared Variables
 // --------------------------------------------------
@@ -21,17 +26,21 @@
 // are different per mode.
 
 $colors: (
-  primary:          #387ef5,
-  secondary:        #32db64,
-  danger:           #f53d3d,
-  light:            #f4f4f4,
-  dark:             #222,
-  favorite:         #69BB7B,
-  twitter:          #53ACEB,
-  github:           #000000,
-  instagram:        #235D8D,
+  primary:    #387ef5,
+  secondary:  #32db64,
+  danger:     #f53d3d,
+  light:      #f4f4f4,
+  dark:       #222,
+  favorite:   #69BB7B,
+  twitter:    #53ACEB,
+  github:     #000000,
+  instagram:  #235D8D,
   mlitemdivider:    #D3EAF0,
   mllightblue:      #31C0E6,
-  mlnavbar:         #172F39,
+  mlwhite:     #ffffff,
+  mlnavbar:    (
+    base: #172F39,
+    contrast: #31C0E6
+  ),
   mlnavbarmenu:     #28a54c
 );
